--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px">
+		<h1>Pricing Card</h1>
+		<p> Price: Rs.200</p>
+		<p> Description: Loren ipsum dolar sit amet, consectetur adipiscing elit.</p>
+		<button> Buy Now</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
